panorama-ui/react-ui/panorama-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: react-ui
  name: react-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
      - image: panoramaiubads/react-ui
        name: react-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react-ui
  name: react-ui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30800
  selector:
    app: react-ui
