panorama-ui/react-ui/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "panorama.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-ui
            port:
              number: 80
